# esa

./: .gitignore  CLAUDE.md  docker-compose.yml  heroku.build  package.json
.github/workflows/: deploy-aws.yml  deploy.yml  deploy.yml.bck
.github/workflows/.do/: app.yaml
client/: .env  .env.default  .env.example  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  geojson-generator.py  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
client/src/: env.mjs  middleware.ts  proxy.ts
client/src/app/: layout-providers.tsx  layout.tsx  page-providers.tsx  page.tsx
client/src/constants/: categories.ts  (+6 more)
cms/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  Procfile  package.json  stories-generator.py
cms/config/: admin.ts  middlewares.ts  plugins.ts
data-processing/: .gitignore  LAYER_PROCESSING_GUIDELINES.md  README.md  docker-compose.yml  environment.yml  pyproject.toml
data-processing/notebooks/: 00_country_boundaries.ipynb  01_raster_layers.ipynb  02_vector_layers.ipynb  03_animated_layers.ipynb  04_charts_data.ipynb  04_data_adquisition.ipynb  04_layers_step1.ipynb  05_data_prep.ipynb  06_charts_data.ipynb  07_layers_step1.ipynb  zavkhan_plot.ipynb
data-processing/src/: animated_config.yaml  data_params.py  maps.py  raster_config.yaml  vector_config.yaml
data-processing/src/data_processing/: animated_tiles.py  download_step1.py  process_apng.py  process_layers.py  raster_processor.py  utils.py  vector_processor.py
data-processing/src/helpers/: cog_converter.py  mbtiles_converter.py  qml_parser.py  raster_ops.py  s3.py  s3_uploader_parallel.py  vector_to_raster.py
infrastructure/base/: .terraform.lock.hcl  main.tf  variables.tf  versions.tf
infrastructure/state/: main.tf  variables.tf
infrastructure/terraform/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
types/: orval.config.ts  package.json
(+270 files in other folders)
